# rust-training

./: .gitignore  99-jlink-nrf.rules  99-microbit-v2.rules  README.md  build-all.sh  check.sh  lychee.toml
.github/: dependabot.yml
.github/workflows/: check.yml  links.yml  publish.yml
.zed/: settings.json
book/: book.toml
book/src/: SUMMARY.md  Z-outro.md  advanced-syntax.md  async-on-embedded.md  async-rust-python.md  asynchronous-multitasking.md  basic-syntax.md  cargo-tooling.md  closures-and-dynamic-dispatch.md  crate-engineering.md  embassy-framework.md  embedded-ecosystem.md  foreign-function-interface.md  instructions.md  interior-mutability.md  introduction-to-multitasking.md  introduction.md  ownership-and-references.md  parallel-multitasking.md  portable-drivers.md  rust-for-web-servers.md  rust-for-web.md  rust-from-python.md  rust-in-the-browser.md  rust-in-the-cloud.md  testing-and-fuzzing.md  traits-and-generics.md  wrap-up.md
book/src/0-install/: mod.md
book/src/A1-basic-syntax/: mod.md
book/src/A2-ownership-references/: mod.md
book/src/A3-advanced-syntax/: mod.md
book/src/A4-traits-generics/: mod.md
book/src/B1-embedded-basics/: mod.md
book/src/B2-drivers/: mod.md
book/src/B3-rtic/: mod.md
book/src/B4-async-embedded/: mod.md
book/src/B5-iot/: mod.md
book/src/C1-parallel-rust/: mod.md
book/src/C2-async-foundations/: mod.md
book/src/C2-async-rust/: mod.md
book/src/C3-async-foundations/: mod.md
book/src/C3-ffi/: mod.md
book/src/C4-ffi/: mod.md
book/src/D-concurrency-parallelism/: mod.md
exercises/: book.toml
exercises/0-intro/embedded/: Cargo.toml
exercises/0-intro/embedded/.cargo/: config.toml
exercises/0-intro/embedded/src/: lib.rs
exercises/1-course-introduction/1-introduction/2-embedded/: Cargo.toml  rust-toolchain.toml
exercises/1-course-introduction/1-introduction/2-embedded/.cargo/: config.toml
exercises/1-course-introduction/1-introduction/2-embedded/src/: lib.rs  main.rs
exercises/2-foundations-of-rust/3-advanced-syntax/5-boxed-data/: Cargo.toml
exercises/2-foundations-of-rust/4-traits-and-generics/1-vector-math/: Cargo.toml
exercises/2-foundations-of-rust/5-closures-and-dynamic-dispatch/1-config-reader/: Cargo.toml
exercises/3-crate-engineering/1-crate-engineering/1-my-serde-app/: Cargo.toml
exercises/4-multitasking/3-asynchronous-multitasking/2-async-chat/: Cargo.toml
exercises/4-multitasking/3-asynchronous-multitasking/3-measurement-data-sink/: Cargo.toml  database.csv
exercises/4-multitasking/3-asynchronous-multitasking/3-measurement-data-sink/node-simulator/: Cargo.toml
exercises/4-multitasking/3-asynchronous-multitasking/3-measurement-data-sink/node-simulator/src/: main.rs
exercises/4-multitasking/3-asynchronous-multitasking/3-measurement-data-sink/src/: database.rs  lib.rs  main.rs
exercises/7-rust-for-data-science/1-rust-from-python/: data.py  main.py  pyproject.toml  test_decoding.py  test_kmers.py  test_setup.py  test_validation.py
exercises/7-rust-for-data-science/1-rust-from-python/1-hello-world/: Cargo.toml  test.py  test_async.py
exercises/7-rust-for-data-science/1-rust-from-python/1-hello-world/src/: asynk.rs  error.rs
exercises/7-rust-for-data-science/1-rust-from-python/2-strompy/: Cargo.toml  op.json  pyproject.toml  strompy_test.py  strompy_test_async.py
exercises/7-rust-for-data-science/1-rust-from-python/2-strompy/src/: error.rs  lib.rs
exercises/8-embedded/1-embedded-ecosystem/1-lsm303agr-id/: Cargo.toml
exercises/8-embedded/1-embedded-ecosystem/1-lsm303agr-id/examples/: twim.rs
exercises/8-embedded/1-embedded-ecosystem/1-lsm303agr-id/src/: main.rs
exercises/8-embedded/2-portable-drivers/1-lis3dh-driver/: Cargo.toml
exercises/8-embedded/2-portable-drivers/1-lis3dh-driver/src/: lis3dh.rs  main.rs
exercises/8-embedded/2-portable-drivers/1-lsm303agr-driver/: Cargo.toml
exercises/8-embedded/2-portable-drivers/1-lsm303agr-driver/.cargo/: config.toml
exercises/8-embedded/2-portable-drivers/1-lsm303agr-driver/src/: lsm303agr.rs  main.rs
exercises/8-embedded/3-async-on-embedded/1-compass/: Cargo.toml
exercises/8-embedded/3-async-on-embedded/1-compass/src/: dial.rs  main.rs
exercises/8-embedded/4-embassy-framework/1-embassy-project/: Cargo.toml
exercises/8-embedded/4-embassy-framework/1-embassy-project/src/: main.rs
exercises/B1-B2/: Cargo.toml  memory.x
exercises/B1-B2/.cargo/: config.toml
exercises/B1-B2/src/: main.rs
exercises/B3/: Cargo.toml  rust-toolchain.toml
exercises/B3/.cargo/: config.toml
exercises/B3/src/: acc.rs  lib.rs  main.rs
exercises/B4/: Cargo.toml  rust-toolchain.toml
exercises/B4/.cargo/: config.toml
exercises/B4/src/: main.rs
exercises/B5/cli/: Cargo.toml
exercises/B5/cli/src/: cmd.rs  main.rs  serial.rs
exercises/B5/firmware/: Cargo.toml
exercises/B5/firmware/.cargo/: config.toml
exercises/B5/firmware/src/: lib.rs  main.rs  uarte.rs
exercises/B5/format/: Cargo.toml
exercises/B5/format/src/: device_to_server.rs  lib.rs  server_to_device.rs
exercises/C2/1-async-channels/: Cargo.toml
exercises/C2/1-observable/: Cargo.toml
exercises/C2/2-async-chat/: Cargo.toml
exercises/C3/1-crc-in-c/: crc32.c
exercises/C3/3-tweetnacl-bindgen/: Cargo.toml  build.rs
exercises/book/0-install/: mod.md
slides/: .gitignore  .npmrc  0-intro.md  1_1-introduction.md  2_1-basic-syntax.md  2_2-ownership-and-references.md  2_3-advanced-syntax.md  2_4-traits-and-generics.md  2_5-closures-and-dynamic-dispatch.md  3_1-crate-engineering.md  3_2-testing-and-fuzzing.md  3_3-cargo.md  4_1-introduction-to-multitasking.md  4_2-parallel-multitasking.md  4_3-asynchronous-multitasking.md  5_1-rust-for-web.md  6_1-foreign-function-interface.md  7_1-rust-from-python.md  8_1-embedded-ecosystem.md  8_2-portable-drivers.md  8_3-async-on-embedded.md  8_4-embassy-framework.md  A-intro-to-rust.md  C-advanced-rust.md  D-concurrency-parallelism.md  Y-ecosystem-and-tooling.md  Z-wrap-up.md  package-lock.json  package.json
slides/layouts/: trainer-intro.vue
slides/setup/: mermaid.ts
slides/styles/: code.css
(+50 files in other folders)
