[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
serde = "1.0.152"
postcard = "1.0.4"
clap = { version = "4.1.8", features = ["derive"] }
nom = "7.1.3"
format = { path = "../format" }
