[package]
name = "format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
postcard = "1.0.4"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]
default-features = false

