[package]
name = "workshop-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
embedded-hal = "0.2.7"
lis3dh = "0.4.1"
rtt-target = "0.5.0"

[dependencies.nrf52840-hal]
version = "0.18.0"
features = ["rt"]

[features]
alternate-addr = []

[profile.release]
debug = true
lto = true
