[package]
name = "workshop-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
embedded-hal = "1.0.0"
rtt-target = "0.5.0"
lsm303agr = "1.0.0"

[dependencies.nrf52833-hal]
version = "0.18.0"
features = ["rt"]

[profile.release]
debug = true
lto = true
