[package]
name = "data-sink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
anyhow = "1.0.86"
csv = "1.3.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
