[package]
name = "lsm303agr-id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
rtt-target = "0.6.2"
embedded-hal = "1.0.0"
embassy-nrf = { version = "0.3.1", features = ["nrf52833", "unstable-pac"] } # NOTE: When updating the HAL also update the link to the example in the book

[profile.release]
debug = true
lto = true
