[package]
name = "compass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-nrf = { version = "0.3.1", features = ["nrf52833", "time-driver-rtc1", "time", "gpiote"] }
rtt-target = "0.6.1"
embedded-hal-async = "1.0.0"
lsm303agr = { version = "1.1.0", features = ["async"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = "0.4.0"
libm = "0.2.11"
panic-rtt-target = "0.2.0"
embassy-sync = "0.6.2"
embassy-futures = "0.1.1"

[profile.release]
debug = true
lto = true
